@@ -1,3 +1,5 @@
+2513 [Update]               removed update server megui.xvidvideo.ru completly
+     [Update]               increased update data refresh interval to 2 days for the development server
 2512 [OneClick]             better support for Blu-ray playlist where eac3to and mediainfo report different track information
 2511 [Chapter Creator]      improved error handling
 2510 [VobSubber]            improved error handling
